-> Accurately list how many files are being shown

--- a/templates/cohorts/cohort_filelist_igv.html
+++ b/templates/cohorts/cohort_filelist_igv.html
@@ -98,7 +98,7 @@
                 <h4>File Listing</h4>
             </div>
             <div class="panel-body">
-                <p class="file-page-count">Showing 20 files. Page: <span class="page-num">1</span> of <span class="file-count">unknown</span> pages.</p>
+                <p class="file-page-count">Showing <span class="showing">20</span> files. Page: <span class="page-num">1</span> of <span class="file-count">unknown</span> pages.</p>
                 <p class="no-file-page-count" style="display: none;">Showing 0 files.</p>
                 <div>
                     <a role="button" class="btn btn-primary prev-page disabled">Previous Page</a>
