--- a/templates/cohorts/cohort_filelist_igv.html
+++ b/templates/cohorts/cohort_filelist_igv.html
@@ -82,7 +82,7 @@
                     <textarea name="selected-files-igv" class="form-control tokenfield" id="selected-files-igv" placeholder="Select files"></textarea>
                     <form id="view-igv" method="POST" action="{% url 'igv' %}" target="_blank">
                         <input type="text" class="hidden_form_value" id="checked_list_input" name="checked_list" data-type="checked_list">
-                        <input type="text" class="hidden_form_value" id="igv-build" name="build">
+                        <input type="text" class="hidden_form_value" id="igv-form-build" name="build" value="{{ build }}">
                         {% csrf_token %}
                     </form>
                 </div>
