-> Bugfix: bad time conversion for displaying user logout time, attempted correction with Django templates -> Debugging weird logout timing issue

--- a/templates/GenespotRE/dashboard.html
+++ b/templates/GenespotRE/dashboard.html
@@ -3,7 +3,7 @@
 {% load custom_tags %}
 {% load cohort_filters %}
 {% load program_custom_tags %}
-{#{% load tz %}#}
+{% load tz %}
 {% block header %}
 {% endblock %}
 
