-> Converting Warning Notice to warning alert type

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -101,6 +101,9 @@
     .modal
         h4
             text-align: left
+    .alert-dismissible
+        p
+            text-align: left
 
 #user-gcp-list
     .table .table
