-> Disabled 'Retry' and 'Register' buttons on Register SA and GCP pages.

--- a/templates/GenespotRE/register_gcp.html
+++ b/templates/GenespotRE/register_gcp.html
@@ -119,7 +119,7 @@
                         their account as well.</p>
                     <p>Users without a <i class="fa fa-check"></i> will have to register with ISB-CGC and then register this project for themselves
                         or request another user perform a project refresh (accessible from the GCP Project list and details pages).</p>
-                    <input class="btn btn-primary" type="submit" value="Register"/>
+                    <input class="btn btn-primary register-gcp-btn" type="submit" value="Register"/>
                     {% csrf_token %}
                 </form>
             </div>
