--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -129,6 +129,29 @@
             list-style: none
             padding: 0px
 
+#register-gcp
+    li
+        margin-top: 30px !important
+        >div
+            margin-left: 15px
+    div.instructions
+        margin-top: 15px
+        margin-bottom: 15px
+        padding: 15px
+        border-radius: 2px
+        border: 1px solid #ccc
+        background: #f5f5f5
+    .verify
+        margin-top: 15px
+        display: block
+    label
+        font-weight: 500
+    #verify-gcp-id
+        display: inline-block
+        width: 550px
+    ol
+        margin-bottom: 20px
+
 #user-adjust-sa
     h4
         margin-bottom: 25px
