--- a/templates/GenespotRE/register_gcp.html
+++ b/templates/GenespotRE/register_gcp.html
@@ -44,68 +44,73 @@
                 </div>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12">
-                <ul>
+                <h5>To register your Google Cloud Project with ISB-CGC, please take the following steps:</h5>
+                <ol>
                     <li>
-                        <h5>Grant the ISB-CGC Service Account access to your project.</h5>
-                        <p>This will allow ISB-CGC to verify that all users of your Google Cloud Project have the same access
-                            rights to protected data as you do. Use the 'Instructions' button to hide or show the steps needed to grant ISB-CGC's Service Account
-                            access to your project. If you have already done this step, you can proceed below.</p>
-                        <button class="btn btn-primary instructions" title="Show/Hide the instructions">Instructions</button>
-                        <div class="instructions">
-                            <div class="row space-bottom-10">
-                                <div class="col-lg-12">
-                                    Go to your <a href="https://console.cloud.google.com/home/dashboard" target="_blank">Google Cloud Project</a>.
+                        <h4>Grant the ISB-CGC Service Account access to your project</h4>
+                        <div>
+                            <p>This will allow ISB-CGC to verify that all users of your Google Cloud Project have the same access
+                                rights to protected data as you do. Use the <b>Instructions</b> button to hide or show the steps in this process.
+                                If you have already granted the ISB-CGC Service Account access to your project, you can <a href="#verify">proceed below to verification</a>.</p>
+                            <button class="btn btn-primary instructions" title="Show/Hide the instructions">Instructions</button>
+                            <div class="instructions">
+                                <div class="row space-bottom-10">
+                                    <div class="col-lg-12">
+                                        Access your <a href="https://console.cloud.google.com/home/dashboard" target="_blank">Google Cloud Project</a> in the GCP Console (this link will open a new browser tab or window).
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row space-bottom-10">
-                                <div class="col-lg-6">
-                                    Select the hamburger menu in the top left corner.
+                                <div class="row space-bottom-10">
+                                    <div class="col-lg-6">
+                                        Select the hamburger menu in the top left corner.
+                                    </div>
+                                    <div class="col-lg-6">
+                                        <img src="{% static 'img/select-hamburger.png' %}" alt="Select Hamburger Menu" width="50%"/>
+                                    </div>
                                 </div>
-                                <div class="col-lg-6">
-                                    <img src="{% static 'img/select-hamburger.png' %}" alt="Select Hamburger Menu" width="50%"/>
+                                <div class="row space-bottom-10">
+                                    <div class="col-lg-6">
+                                        Select IAM & Admin.
+                                    </div>
+                                    <div class="col-lg-6">
+                                         <img src="{% static 'img/select-iam.png' %}" alt="Select IAM & Admin Menu Item" width="50%"/>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row space-bottom-10">
-                                <div class="col-lg-6">
-                                    Select IAM & Admin.
+                                <div class="row space-bottom-10">
+                                    <div class="col-lg-6">
+                                        Click + Add Member.
+                                    </div>
                                 </div>
-                                <div class="col-lg-6">
-                                     <img src="{% static 'img/select-iam.png' %}" alt="Select IAM & Admin Menu Item" width="50%"/>
+                                <div class="row space-bottom-10">
+                                    <div class="col-lg-6">
+                                        Paste <code>{{ GCP_REG_CLIENT_EMAIL }}</code> in the text box.
+                                    </div>
+                                    <div class="col-lg-6">
+                                         <img src="{% static 'img/add-members.png' %}" alt="Add Member Modal Window" width="100%"/>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="row space-bottom-10">
-                                <div class="col-lg-6">
-                                    Click + Add Member.
-                                </div>
-                            </div>
-                            <div class="row space-bottom-10">
-                                <div class="col-lg-6">
-                                    Paste <code>{{ GCP_REG_CLIENT_EMAIL }}</code> in the text box.
-                                </div>
-                                <div class="col-lg-6">
-                                     <img src="{% static 'img/add-members.png' %}" alt="Add Member Modal Window" width="100%"/>
-                                </div>
-                            </div>
-                            <div class="row space-bottom-10">
-                                <div class="col-lg-6">
-                                    In the Role selection, choose Project > Editor.
-                                </div>
-                                <div class="col-lg-6">
-                                     <img src="{% static 'img/role-selector-editor.png' %}" alt="Select Project Viewer" width="100%"/>
+                                <div class="row space-bottom-10">
+                                    <div class="col-lg-6">
+                                        In the Role selection, choose Project > Editor.
+                                    </div>
+                                    <div class="col-lg-6">
+                                         <img src="{% static 'img/role-selector-editor.png' %}" alt="Select Project Viewer" width="100%"/>
+                                    </div>
                                 </div>
                             </div>
                         </div>
                     </li>
                     <li>
-                        <form id="verify-gcp" method="GET" action="{% url 'verify_gcp' user.id %}">
-                            <label for="verify-gcp-id">Please enter your Google Cloud Project ID: </label>
-                            <input id="verify-gcp-id" name="gcp-id" type="text" class="form-control" placeholder="Google Cloud Project ID" required="required"/>
-                            <input class="btn btn-primary" type="submit" value="Verify"/> your Google Cloud Project
-                        </form>
+                        <a name="verify"></a><h4>Verify your Google Cloud Project</h4>
+                        <div>
+                            <form id="verify-gcp" method="GET" action="{% url 'verify_gcp' user.id %}">
+                                <label for="verify-gcp-id">Your Google Cloud Project ID: </label> <input id="verify-gcp-id" name="gcp-id" type="text" class="form-control" placeholder="Google Cloud Project ID" required="required"/>
+                                <span class="verify"><input class="btn btn-primary" type="submit" value="Verify"/> your Google Cloud Project</span>
+                            </form>
+                        </div>
                     </li>
-                </ul>
+                </ol>
                 <div id="invalid-gcp-id" class="alert alert-warning alert-dismissible" style="display: none;">
-                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
                     <span id="verify-error-text"></span>
                     <span id="verify-error-base">The Google Cloud Project ID provided (<span id="provided-gcp-id"></span>) does not appear to be a valid GCP ID. Please double-check and ensure you are not providing the GCP Name or Number. Only the GCP ID can be registered.</span>
                 </div>
