-> Add full multi-line example

--- a/templates/cohorts/new_cohort_barcodes.html
+++ b/templates/cohorts/new_cohort_barcodes.html
@@ -93,7 +93,12 @@
 "TCGA-N7-A4Y8-01A"
 'Hs 863.T', TARGET-51-PAJMFS
 
-"TARGET-51-PAJLIV", Saos-2</pre>
+LAMA-84
+LC-1F
+LCLC-103H
+TARGET-10-CAAABC-60.3A
+TARGET-10-CAAABD-60.2A
+TARGET-10-CAAABF-60.11C</pre>
                                 </ul>
                                 <a name="gdc-manifest"></a><h5>GDC Data Portal Case Manifest Files</h5>
                                 <p>GDC Data Portal case manifests can be obtained on the <a target="_BLANK" href="https://portal.gdc.cancer.gov/exploration">'Cases' tab of the Exploration section of the data portal.</a></p>
@@ -173,6 +178,13 @@
 
 "TCGA-N7-A4Y8-01A"
 'Hs 863.T', TARGET-51-PAJMFS
+
+LAMA-84
+LC-1F
+LCLC-103H
+TARGET-10-CAAABC-60.3A
+TARGET-10-CAAABD-60.2A
+TARGET-10-CAAABF-60.11C
 
 "TARGET-51-PAJLIV", Saos-2</pre>
                                 </ul>
