-> Per BillC, remove camic header from single page; resize iframe and center vertically on load

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -540,7 +540,7 @@ span.code
         img
             margin-top: 5px
     iframe
-        min-height: 900px
+        min-height: 700px
         margin-top: 10px
 
     .logo
@@ -572,3 +572,6 @@ span.code
         padding: 0px
     >.container>.row
         margin: 0px 15px 0px 15px
+
+    .load-spinner
+        margin-top: 12px !important
