--- a/templates/GenespotRE/camic_single.html
+++ b/templates/GenespotRE/camic_single.html
@@ -31,21 +31,13 @@
 {% block page_name %}camic-single{% endblock %}
 
 {% block page_header %}
-    <div class="container camic-header-container">
-        <div class="pull-left logo">
-            <a href="http://imaging.cci.emory.edu/wiki/display/CAMIC/Home" target="_blank">
-                <img class="header-camic-logo" alt="caMicroscope Logo" src="{% static 'img/camic_logo.png' %}" />
-            </a>
-        </div>
-        <h1 class="page-header pull-left"><a href="http://imaging.cci.emory.edu/wiki/display/CAMIC/Home" target="_blank">caMicroscope</a></h1>
-    </div>
 {% endblock %}
 
 {% block content %}
 
     <div class="row">
         <div class="panel panel-default">
-            <div class="panel-body">
+            <div class="panel-body case-info">
                 {{ barcodes.0.barcode }}
             </div>
         </div>
@@ -54,12 +46,6 @@
         <div id="camic-viewer">
             <div class="data-tab-content-panel">
                 <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <input type="submit" form ="view-camic" value="Open in new tab" class="btn btn-primary pull-right nocap" />
-                        <form id="view-camic" method="POST" action="{% url 'camic_barcode' barcodes.0.barcode %}" target="_blank">
-                            {% csrf_token %}
-                        </form>
-                    </div>
                     <div class="panel-body">
                         <div class="iframe-container">
                             <div class="load-spinner" style="display:none;"><i class="fa fa-spinner fa-spin"></i></div>
