-> Initial camic touchups per discussion with BillC

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -575,3 +575,9 @@ span.code
 
     .load-spinner
         margin-top: 12px !important
+
+    .case-info
+        .item
+            padding-right: 25px
+            padding-left: 25px
+            display: inline-block
