--- a/templates/cohorts/cohort_filelist_all.html
+++ b/templates/cohorts/cohort_filelist_all.html
@@ -72,7 +72,7 @@
         <div class="filelist-panel panel">
             <div id="" class="alert alert-warning alert-dismissable file-list-warning" style="display: none;">
                 <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
-                The maximum number of files which can be downloaded in a list is <span class="file-list-limit">{{ sel_file_max }}</span>. Your selections currently total
+                The maximum number of files which can be downloaded in a list is <span class="file-list-limit">{{ file_list_max }}</span>. Your selections currently total
                 <span class="file-list-total">#</span>. Please filter your list using the platform panel at the left (or make a smaller cohort) to limit the size of your file download list.
             </div>
             <div class="panel-heading">
