--- a/templates/cohorts/cohort_filelist.html
+++ b/templates/cohorts/cohort_filelist.html
@@ -69,8 +69,65 @@
         </div>
     </div>
 
+    {% if cohort.perm.perm == 'OWNER' %}
+    <!-- Export File Manifest Modal -->
+    <div class="modal fade" id="export-manifest-modal" tabindex="-1" role="dialog" aria-labelledby="export-manifest-header" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    <h4 id="export-manifest-header" class="modal-title">File Manifest Export</h4>
+                    <div class="modal-js-messages" id="export-manifest-js-messages">
+                    </div>
+                </div>
+                <form id="export-manifest-form" method="POST" action="{% url 'export_cohort_filelist_to_bq' cohort.id %}">
+                    {% csrf_token %}
+                    <input type="hidden" class="param" name="build" value="{{ build }}" />
+                    <div class="modal-body">
+                        <div class="message-container"></div>
+                        <div class="form-group">
+                            <label for="export-manifest-project-dataset">Choose a Project and Dataset:</label>
+                            <select id="export-manifest-project-dataset" name="project-dataset" class="form-control">
+                                <option value="" disabled selected type="label">Please select a project and dataset</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <ul class="table-type" disabled>
+                                <div class="radio table-type">
+                                    <label class="table-type" title="Select a project and dataset to enable this option."><input class="table-type" type="radio" name="table-type" value="new" disabled checked> Make a new table</label>
+                                </div>
+                                <div class="radio table-type">
+                                    <label class="table-type" title="Select a project and dataset to enable this option."><input class="table-type" type="radio" name="table-type" value="append" disabled> Append to an existing table</label>
+                                </div>
+                            </ul>
+                        </div>
+                        <div class="form-group table-list" style="display: none;">
+                            <label for="table-name">Choose a table:</label>
+                            <select id="export-manifest-table" name="table-name" class="form-control">
+                                <option value="" disabled selected type="label">Please select a table</option>
+                            </select>
+                        </div>
+                        <div class="form-group new-table-name">
+                            <label for="new-table-name">Name:</label>
+                            <input title="Select a project and dataset to enable this option." disabled class="form-control new-table-name" type="text" maxlength="1024" placeholder="If left blank, a table name will be provided." id="new-table-name" name="new-table-name" />
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        {% csrf_token %}
+                        <input type="submit" value="Export File Manifest" class="btn btn-primary" />
+                        <button type="button" class="btn btn-link" data-dismiss="modal">Cancel</button>
+                        <div id="exporting-cohort" class="collapse" style="display: none;">
+                            <i class="fa fa-circle-o-notch fa-spin"></i>  Exporting File Manifest...
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    {% endif %}
 
     <script type="text/javascript">
+    console.debug('{{ cohort.perm.perm }}');
     var cohort_id = {{ cohort.id }};
     var page = 1;
     var download_url = '{{ download_url }}';
