--- a/templates/GenespotRE/gcp_detail.html
+++ b/templates/GenespotRE/gcp_detail.html
@@ -242,6 +242,7 @@
                         </p>
                         <input type="hidden" name="is_refresh" value="true" />
                         <input type="hidden" name="gcp_id" value="{{ gcp.project_id }}" />
+                        <input type="hidden" name="detail" value="true" />
                     </div>
                     <div class="modal-footer">
                         <input type="submit" value="Refresh" class="btn btn-primary" />
