-> Minor cohort-via-barcodes tweaks

--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -513,7 +513,7 @@
         width: 50%
     hr
         border-color: $isb-primary
-    pre
+    .valid-entries, .invalid-entries
         overflow-y: auto
         max-height: 700px
 
