--- a/templates/cohorts/new_cohort_barcodes.html
+++ b/templates/cohorts/new_cohort_barcodes.html
@@ -126,8 +126,8 @@ TARGET-10-CAAABF-60.11C</pre>
                                     <table id="valid-entries-table" class="table table-striped tablesorter">
                                         <thead><tr>
                                             <th>Program</th>
-                                            <th>Samples</th>
-                                            <th>Cases</th>
+                                            <th>Case</th>
+                                            <th>Sample</th>
                                         </tr></thead>
                                         <tbody><td></td><td></td><td></td></tbody>
                                     </table>
@@ -137,8 +137,8 @@ TARGET-10-CAAABF-60.11C</pre>
                                     <table class="table table-striped">
                                         <thead><tr>
                                                 <th>Program</th>
-                                                <th>Samples</th>
-                                                <th>Cases</th>
+                                                <th>Case</th>
+                                                <th>Sample</th>
                                         </tr></thead>
                                         <tbody></tbody>
                                     </table>
@@ -158,8 +158,8 @@ TARGET-10-CAAABF-60.11C</pre>
                                     <table id="invalid-entries-table" class="table table-striped tablesorter">
                                         <thead><tr>
                                             <th>Program</th>
-                                            <th>Samples</th>
-                                            <th>Cases</th>
+                                            <th>Case</th>
+                                            <th>Sample</th>
                                             </tr></thead>
                                         <tbody><td></td><td></td><td></td></tbody>
                                     </table>
@@ -218,11 +218,11 @@ TARGET-10-CAAABF-60.11C
                                 <div class="valid-entries">
                                     <h5>Valid Entries</h5>
                                     <table id="valid-entries-table2" class="table table-striped tablesorter">
-                                        <thead>
+                                        <thead><tr>
                                             <th>Program</th>
-                                            <th>Samples</th>
-                                            <th>Cases</th>
-                                        </thead>
+                                            <th>Case</th>
+                                            <th>Sample</th>
+                                        </tr></thead>
                                         <tbody><td></td><td></td><td></td></tbody>
                                     </table>
                                 </div>
@@ -231,8 +231,8 @@ TARGET-10-CAAABF-60.11C
                                     <table class="table table-striped">
                                         <thead><tr>
                                                 <th>Program</th>
-                                                <th>Samples</th>
-                                                <th>Cases</th>
+                                                <th>Case</th>
+                                                <th>Sample</th>
                                         </tr></thead>
                                         <tbody></tbody>
                                     </table>
@@ -252,9 +252,9 @@ TARGET-10-CAAABF-60.11C
                                     <table id="invalid-entries-table2" class="table table-striped tablesorter">
                                         <thead><tr>
                                             <th>Program</th>
-                                            <th>Samples</th>
-                                            <th>Cases</th></tr>
-                                        </thead>
+                                            <th>Cases</th>
+                                            <th>Sample</th>
+                                        </tr></thead>
                                         <tbody><td></td><td></td><td></td></tbody>
                                     </table>
                                     <div class="validation-messages">
