--- a/templates/cohorts/cohort_details.html
+++ b/templates/cohorts/cohort_details.html
@@ -229,6 +229,10 @@
         <div class="flyout-footer">
             <form class="add-comment" action="{% url 'save_cohort_comment' %}" method="POST">
                 {% csrf_token %}
+                <div id="unallowed-chars-alert-comment" class="alert alert-warning alert-dismissable" style="display: none;">
+                    <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                    Your comment contains invalid characters (<span id="unallowed-chars-comment"></span>). Please adjust the content accordingly.
+                </div>
                 <label for="comment-content">Add Comment (1000 character limit)</label>
                 <textarea id="comment-content" class="form-control space-bottom-10" name="content" maxlength="1000"></textarea>
                 <input type="hidden" name="cohort_id" value="{{ cohort.id }}" />
