--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -165,6 +165,15 @@
 #datasets-select-div
     margin-top: 15px
 
+#sa-spinner
+    &.load-spinner
+        position: fixed
+        z-index: 999
+        left: 45%
+        top: 45%
+        margin: auto
+        font-size: 75px
+
 #gcp-detail
     h1.page-header
         text-transform: none
