-> Fix layout on GCP registration page -> #2268 for project registration

--- a/blink_sass/pages/_users.sass
+++ b/blink_sass/pages/_users.sass
@@ -130,7 +130,7 @@
             padding: 0px
 
 #register-gcp
-    li
+    ol>li
         margin-top: 30px !important
         >div
             margin-left: 15px
