--- a/templates/GenespotRE/user_detail_saml.html
+++ b/templates/GenespotRE/user_detail_saml.html
@@ -84,7 +84,7 @@
 
     <script type="text/javascript"> 
         var expiry_time = new Date("{{ user_details.NIH_assertion_expiration|safe }}".replace(" ","T"));
-        if(expiry_time != null)
+        if(document.getElementById('NIH_expiration') != null)
             document.getElementById('NIH_expiration').innerHTML = expiry_time; 
     </script>
 {%  endblock %}
