--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2023,7 +2023,7 @@ a.skip-nav {
   overflow-y: auto;
   max-height: 700px; }
 
-#saving-cohort, .verify-pending {
+#saving-cohort, .verify-pending, .register-pending {
   margin-left: 20px;
   display: inline; }
 
