--- a/blink_sass/pages/_cohorts.sass
+++ b/blink_sass/pages/_cohorts.sass
@@ -517,7 +517,7 @@
         overflow-y: auto
         max-height: 700px
 
-#saving-cohort, .verify-pending
+#saving-cohort, .verify-pending, .register-pending
     margin-left: 20px
     display: inline
 
