--- a/templates/GenespotRE/register_sa.html
+++ b/templates/GenespotRE/register_sa.html
@@ -67,10 +67,15 @@
                                 </ul>
                             </div>
                             <input type="hidden" name="gcp_id" value="{{ gcp_id }}"/>
-                            <br>
-                            Click this <input type="submit" class="verify-sa-btn btn btn-primary" value="button"/> to allow us to verify who is allowed to use this service account.
+                            <div class="block">
+                                <input type="submit" class="verify-sa-btn btn btn-primary" value="Verify Service Account Users"/>
+                                <div class="collapse verify-pending" style="display: none;">
+                                    <i class="fa fa-circle-o-notch fa-spin"></i>  Please wait...
+                                </div>
+                            </div>
+                            <p>*This will allow us to verify who is allowed to use this service account.</p>
                         </form>
-                        <div id="sa-spinner" class="fa fa-spinner fa-spin hidden load-spinner"></div>
+
                     </li>
                     <div class="user-verification" style="display:none;">
                         <table class="table">
@@ -82,14 +87,12 @@
                                 <th>Authorized Datasets</th>
                             </tr>
                             </thead>
-                            <tbody>
-
-                            </tbody>
+                            <tbody></tbody>
                         </table>
                     </div>
                     <div class="cannot-register" style="display: none;">
                         <p>Some of your users do not have access to the datasets you would like to use. Please try again when they have the proper permissions.</p>
-                        <button class="retry-btn btn btn-primary">Retry</button>
+                        <input type="button" class="retry-btn btn btn-primary" value="Retry"/>
                         <a href="{% url 'user_gcp_list' user.id %}" class="back-btn btn btn-primary" role="button">Go Back</a>
                     </div>
                     <div class="register-sa-div" style="display: none;">
@@ -97,7 +100,12 @@
                             {% csrf_token %}
                             <p>We have verified that all of the users in your Google Cloud Project have permission to access the proposed datasets.</p>
                             <input type="hidden" name="gcp_id" value="{{ gcp_id }}"/>
-                            <input type="submit" class="register-sa-btn btn btn-primary" value="Register" />
+                            <div class="block">
+                                <input type="submit" class="register-sa-btn btn btn-primary" value="Register"/>
+                                <div class="collapse register-pending" style="display: none;">
+                                    <i class="fa fa-circle-o-notch fa-spin"></i>  Please wait...
+                                </div>
+                            </div>
                         </form>
                     </div>
                 </ul>
