--- a/templates/variables/variable_detail.html
+++ b/templates/variables/variable_detail.html
@@ -96,6 +96,10 @@
             <form id="edit-workbook" method="POST" action="{% url 'worksheet_create_with_variables' %}">
                 {% csrf_token %}
                 <div class="modal-body">
+                    <div id="unallowed-chars-alert" class="alert alert-warning alert-dismissable unallowed-chars-alert-wb" style="display: none;">
+                        <button type="button" class="close" data-hide="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+                        Your workbook's name contains invalid characters (<span class="unallowed-chars-wb"></span>). Please choose another name.
+                    </div>
                     <label id="name-label" for="name-input">Name (required)</label>
                     <input id="name-input" class="form-control" type="text" name="name" value="{{ variables.name }} workbook" aria-labelledby="name-label"/>
                     <input type="hidden" name="variable_list_id" value="{{ variables.id }}" />
@@ -110,4 +114,4 @@
 </div>
 {% endblock %}
 
-{% block js_file %}{% static 'js/base.js' %}{% endblock %}
+{% block js_file %}{% static 'js/variables/variables_detail.js' %}{% endblock %}
