--- a/templates/variables/variable_list.html
+++ b/templates/variables/variable_list.html
@@ -70,4 +70,4 @@
 </div>
 {% endblock %}
 
-{% block js_file %}{% static 'js/base.js' %}{% endblock %}
+{% block js_file %}{% static 'js/variables/variables_detail.js' %}{% endblock %}
