-> Unify into single 'form utils' JS file

--- a/templates/variables/variable_list.html
+++ b/templates/variables/variable_list.html
@@ -72,4 +72,4 @@
 </div>
 {% endblock %}
 
-{% block js_file %}{% static 'js/variables/variables_detail.js' %}{% endblock %}
+{% block js_file %}{% static 'js/form_utils.js' %}{% endblock %}
