--- a/templates/variables/variable_detail.html
+++ b/templates/variables/variable_detail.html
@@ -114,4 +114,4 @@
 </div>
 {% endblock %}
 
-{% block js_file %}{% static 'js/variables/variables_detail.js' %}{% endblock %}
+{% block js_file %}{% static 'js/form_utils.js' %}{% endblock %}
